[package]
name = "nalog"
version = "0.1.0"
authors = ["Igor Ovsyannikov <kamish@outlook.com>"]
edition = "2018"

[lib]
name = "nalog"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_enum = "0.4.2"

[dependencies.pyo3]
version = "0.8.3"
features = ["extension-module"]
